# monorepo

./: .eslintrc.json  .gitignore  .prettierrc  LICENSE  README.md  nx.json  package.json  pyproject.toml  tsconfig.base.json
.husky/: pre-commit
apps/go-cli/: project.json  tsconfig.json
apps/go-cli/src/: ascii.go
apps/jeddy-tan/: index.html  project.json  tsconfig.json  vite.config.ts
apps/jeddy-tan-e2e/: project.json
apps/jeddy-tan-e2e/src/e2e/: app.cy.ts
apps/jeddy-tan/src/: data.json  main.tsx
apps/jeddy-tan/src/app/: app.spec.tsx  app.tsx  nx-welcome.tsx
apps/jeddy-tan/src/components/Footer/: Footer.tsx
apps/jeddy-tan/src/components/Navbar/: Navbar.tsx
apps/jeddy-tan/src/components/Timeline/: Timeline.tsx
apps/jeddy-tan/src/pages/: Home.tsx
apps/jeddy-tan/src/styles/: Footer.css  Home.css  Navbar.css
apps/python-cli/: project.json
libs/ascii/: package.json  project.json
